	resolution set.

  * Fixed bug in .desktop file - now asks for Filenames (%F) not URIs (%U)

  * Solved problem with margins not being saved in Single, Poster and Carousel modes

  * Fixed a threading bug which caused stale CMSTransforms to be used when changing proof mode

  * Fixed drag-and-drop problem with KDE4.


PhotoPrint-0.3.9

  * Fixed a bug where vertical offsets and cropping were ignored when images
    are downsampled.

  * Threads code should now work on Win32

  * SearchPath class renamed to avoid Win32 name clash

  * Resolved a couple of other Win32 build issues

  * Hopefully fixed custom page size bug for borderless mode

  * Fixed a resolution bug in the TIFF loader - a decimal point in the wrong place!

  * Hopefully fixed a papersize bug which afflicted papersizes not normally known
    to Gutenprint, but specified within a PPD file.

  * ProfileManager can now use the LCMS inbuilt sRGB profile.

  * Added physical size and resolution information to the ImageInfo widget.

  * Fixed a bug with high-res previews and rotation.

  * Effects are now copied when duplicating images.


PhotoPrint-0.3.8b

  * Nasty exception-handling bug in the multi-threaded high-res previews fixed.

  * Single layout supports fractional percentage scaling.


PhotoPrint-0.3.8

  * Fixed some minor errors causing compilation problems in some instances.
    Thanks for Hubert Figuiere for pointing these out and supplying a patch.

  * Fixed broken compilation if libcups-devel is missing.

  * Configure script will now bail out if either libtiff or libjpeg is missing.

  * Added ability to save 16-bit data to TIFFSaver and export.

  * Reworked ProfileSelector to show Descriptive names rather than filenames,
    and to use tooltips rather than a separate label box to show ancillary
    information (i.e. the filename).

  * Vastly improved implementation of the Downsample filter - no longer results